# robot_interfaces

./: CMakeLists.txt  Readme.md  package.xml
include/robot_interfaces/: command_interfaces.hpp  command_types.hpp  explorer_joint_position_component.hpp  explorer_velocity_component.hpp  franka_velocity_component.hpp  generic_component.hpp  joint_position_component.hpp  kinova_velocity_component.hpp  robot_interfaces_algos.hpp
src/: explorer_joint_position_component.cpp  explorer_velocity_component.cpp  franka_velocity_component.cpp  generic_component.cpp  joint_position_component.cpp  kinova_velocity_component.cpp  robot_interfaces_algos.cpp
test/: TEST_GUIDE.md  test_generic_fk_unit.cpp
